kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hostnames:
    - longhorn.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
